{
  "version": 4,
  "terraform_version": "0.14.10",
  "serial": 102,
  "lineage": "3a95eb20-8840-c567-a152-a5c35e7ac254",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:769113276459:security-group/sg-01a46e2411cff8ae8",
            "description": "EKS cluster security group.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow cluster egress access to the Internet.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01a46e2411cff8ae8",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow pods to communicate with the EKS cluster API.",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d4f6cacddb1d1a0b"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "test-mbazych20210523012750110500000001",
            "name_prefix": "test-mbazych",
            "owner_id": "769113276459",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "test-mbazych-eks_cluster_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c7db017a94322e07"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:769113276459:security-group/sg-0d4f6cacddb1d1a0b",
            "description": "Security group for all nodes in the cluster.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow nodes all egress to the Internet.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d4f6cacddb1d1a0b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow node to communicate with each other.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01a46e2411cff8ae8"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Allow workers pods to receive communication from the cluster control plane.",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01a46e2411cff8ae8"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "test-mbazych20210523013840212100000003",
            "name_prefix": "test-mbazych",
            "owner_id": "769113276459",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "test-mbazych-eks_worker_sg",
              "kubernetes.io/cluster/test-mbazych": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c7db017a94322e07"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_cloudwatch_log_group.this",
            "module.eks.aws_eks_cluster.this",
            "module.eks.aws_iam_role.cluster",
            "module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSServicePolicy",
            "module.eks.aws_security_group.cluster",
            "module.eks.data.aws_iam_policy_document.cluster_assume_role_policy",
            "module.eks.data.aws_iam_role.custom_cluster_iam_role",
            "module.eks.data.aws_partition.current",
            "module.vpc.aws_subnet.private_prod",
            "module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow cluster egress access to the Internet.",
            "from_port": 0,
            "id": "sgrule-4134399863",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-01a46e2411cff8ae8",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_https_worker_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow pods to communicate with the EKS cluster API.",
            "from_port": 443,
            "id": "sgrule-473764601",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-01a46e2411cff8ae8",
            "self": false,
            "source_security_group_id": "sg-0d4f6cacddb1d1a0b",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_cloudwatch_log_group.this",
            "module.eks.aws_eks_cluster.this",
            "module.eks.aws_iam_role.cluster",
            "module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSServicePolicy",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.eks.data.aws_iam_policy_document.cluster_assume_role_policy",
            "module.eks.data.aws_iam_role.custom_cluster_iam_role",
            "module.eks.data.aws_partition.current",
            "module.vpc.aws_subnet.private_prod",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow nodes all egress to the Internet.",
            "from_port": 0,
            "id": "sgrule-3734506445",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0d4f6cacddb1d1a0b",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_cloudwatch_log_group.this",
            "module.eks.aws_eks_cluster.this",
            "module.eks.aws_iam_role.cluster",
            "module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSServicePolicy",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.eks.data.aws_iam_policy_document.cluster_assume_role_policy",
            "module.eks.data.aws_iam_role.custom_cluster_iam_role",
            "module.eks.data.aws_partition.current",
            "module.vpc.aws_subnet.private_prod",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow workers pods to receive communication from the cluster control plane.",
            "from_port": 1025,
            "id": "sgrule-3806586027",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d4f6cacddb1d1a0b",
            "self": false,
            "source_security_group_id": "sg-01a46e2411cff8ae8",
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_cloudwatch_log_group.this",
            "module.eks.aws_eks_cluster.this",
            "module.eks.aws_iam_role.cluster",
            "module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSServicePolicy",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.eks.data.aws_iam_policy_document.cluster_assume_role_policy",
            "module.eks.data.aws_iam_role.custom_cluster_iam_role",
            "module.eks.data.aws_partition.current",
            "module.vpc.aws_subnet.private_prod",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
            "from_port": 443,
            "id": "sgrule-2961563753",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d4f6cacddb1d1a0b",
            "self": false,
            "source_security_group_id": "sg-01a46e2411cff8ae8",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_cloudwatch_log_group.this",
            "module.eks.aws_eks_cluster.this",
            "module.eks.aws_iam_role.cluster",
            "module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSServicePolicy",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.eks.data.aws_iam_policy_document.cluster_assume_role_policy",
            "module.eks.data.aws_iam_role.custom_cluster_iam_role",
            "module.eks.data.aws_partition.current",
            "module.vpc.aws_subnet.private_prod",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow node to communicate with each other.",
            "from_port": 0,
            "id": "sgrule-2344875136",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0d4f6cacddb1d1a0b",
            "self": false,
            "source_security_group_id": "sg-0d4f6cacddb1d1a0b",
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_cloudwatch_log_group.this",
            "module.eks.aws_eks_cluster.this",
            "module.eks.aws_iam_role.cluster",
            "module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.eks.aws_iam_role_policy_attachment.cluster_AmazonEKSServicePolicy",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.eks.data.aws_iam_policy_document.cluster_assume_role_policy",
            "module.eks.data.aws_iam_role.custom_cluster_iam_role",
            "module.eks.data.aws_partition.current",
            "module.vpc.aws_subnet.private_prod",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "mod_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-07a51b22f486bc5e5",
            "domain": "vpc",
            "id": "eipalloc-9e75d6a4",
            "network_interface": "eni-021ef6ad4107dd728",
            "private_dns": "ip-10-20-36-111.eu-central-1.compute.internal",
            "private_ip": "10.20.36.111",
            "public_dns": "ec2-18-192-222-8.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.192.222.8",
            "public_ipv4_pool": "amazon",
            "tags": {
              "kubernetes.io/cluster/test-mbazych": "shared"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0bce74ea07f22f2f9",
            "domain": "vpc",
            "id": "eipalloc-b86dce82",
            "network_interface": "eni-0ab9028fb60ee8275",
            "private_dns": "ip-10-20-46-88.eu-central-1.compute.internal",
            "private_ip": "10.20.46.88",
            "public_dns": "ec2-3-67-238-156.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.67.238.156",
            "public_ipv4_pool": "amazon",
            "tags": {
              "kubernetes.io/cluster/test-mbazych": "shared"
            },
            "vpc": true
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0b8d82167c28536b5",
            "domain": "vpc",
            "id": "eipalloc-b861c282",
            "network_interface": "eni-01b9d01d786a71fd6",
            "private_dns": "ip-10-20-51-92.eu-central-1.compute.internal",
            "private_ip": "10.20.51.92",
            "public_dns": "ec2-35-156-48-43.eu-central-1.compute.amazonaws.com",
            "public_ip": "35.156.48.43",
            "public_ipv4_pool": "amazon",
            "tags": {
              "kubernetes.io/cluster/test-mbazych": "shared"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-07d5c712d7d61efae",
            "owner_id": "769113276459",
            "tags": {
              "Name": "vpc",
              "kubernetes.io/cluster/test-mbazych": "shared"
            },
            "vpc_id": "vpc-0c7db017a94322e07"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-9e75d6a4",
            "id": "nat-0e97f121e641d616c",
            "network_interface_id": "eni-021ef6ad4107dd728",
            "private_ip": "10.20.36.111",
            "public_ip": "18.192.222.8",
            "subnet_id": "subnet-05210f01088b5f214",
            "tags": {
              "kubernetes.io/cluster/test-mbazych": "shared"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.mod_nat",
            "module.vpc.aws_internet_gateway.default",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-b86dce82",
            "id": "nat-015c7700a02164612",
            "network_interface_id": "eni-0ab9028fb60ee8275",
            "private_ip": "10.20.46.88",
            "public_ip": "3.67.238.156",
            "subnet_id": "subnet-080c03d65c2a23faf",
            "tags": {
              "kubernetes.io/cluster/test-mbazych": "shared"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.mod_nat",
            "module.vpc.aws_internet_gateway.default",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-b861c282",
            "id": "nat-0e591a3698c91e661",
            "network_interface_id": "eni-01b9d01d786a71fd6",
            "private_ip": "10.20.51.92",
            "public_ip": "35.156.48.43",
            "subnet_id": "subnet-0280aa8511cba791a",
            "tags": {
              "kubernetes.io/cluster/test-mbazych": "shared"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.mod_nat",
            "module.vpc.aws_internet_gateway.default",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-07a3cf74e59535dcd1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-0e97f121e641d616c",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07a3cf74e59535dcd",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.mod_nat",
            "module.vpc.aws_internet_gateway.default",
            "module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b45ee0d7ce9079961080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-015c7700a02164612",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b45ee0d7ce907996",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.mod_nat",
            "module.vpc.aws_internet_gateway.default",
            "module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-00eac455b08ead00e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-0e591a3698c91e661",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00eac455b08ead00e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.mod_nat",
            "module.vpc.aws_internet_gateway.default",
            "module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-07d5c712d7d61efae",
            "id": "r-rtb-073c38cb37174d8701080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-073c38cb37174d870",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.default",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-07a3cf74e59535dcd",
            "owner_id": "769113276459",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0e97f121e641d616c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_az1",
              "kubernetes.io/cluster/test-mbazych": "shared"
            },
            "vpc_id": "vpc-0c7db017a94322e07"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0b45ee0d7ce907996",
            "owner_id": "769113276459",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-015c7700a02164612",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_az2",
              "kubernetes.io/cluster/test-mbazych": "shared"
            },
            "vpc_id": "vpc-0c7db017a94322e07"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-00eac455b08ead00e",
            "owner_id": "769113276459",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0e591a3698c91e661",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_az3",
              "kubernetes.io/cluster/test-mbazych": "shared"
            },
            "vpc_id": "vpc-0c7db017a94322e07"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-073c38cb37174d870",
            "owner_id": "769113276459",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07d5c712d7d61efae",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public",
              "kubernetes.io/cluster/test-mbazych": "shared"
            },
            "vpc_id": "vpc-0c7db017a94322e07"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_admin",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0beb32fc9f620b74d",
            "route_table_id": "rtb-07a3cf74e59535dcd",
            "subnet_id": "subnet-08f1b34f5af50f3b3"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.admin",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0abd8a44e229c329c",
            "route_table_id": "rtb-0b45ee0d7ce907996",
            "subnet_id": "subnet-0e53ec78d82c7e23d"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.admin",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0edf8353c472e3ce3",
            "route_table_id": "rtb-00eac455b08ead00e",
            "subnet_id": "subnet-0ad9dc0a98a120e99"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.admin",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_private_prod",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0806e2388f8ee85b0",
            "route_table_id": "rtb-07a3cf74e59535dcd",
            "subnet_id": "subnet-005cb6f998576ce89"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private_prod",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00de72641a2340a6e",
            "route_table_id": "rtb-0b45ee0d7ce907996",
            "subnet_id": "subnet-0f7970d87c5717ca1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private_prod",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08044cc2161e0f0f6",
            "route_table_id": "rtb-00eac455b08ead00e",
            "subnet_id": "subnet-0df7fcfe5610e9db9"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private_prod",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_private_working",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b33c048f9f65dbe5",
            "route_table_id": "rtb-07a3cf74e59535dcd",
            "subnet_id": "subnet-0a94670b3e446cef0"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private_working",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06e062fd7ee2b95c4",
            "route_table_id": "rtb-0b45ee0d7ce907996",
            "subnet_id": "subnet-002ae6bcece46d1ae"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private_working",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cff48b890bf7f74d",
            "route_table_id": "rtb-00eac455b08ead00e",
            "subnet_id": "subnet-0211b92a5c7ce1c93"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private_working",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-001fba406b5feaf2e",
            "route_table_id": "rtb-073c38cb37174d870",
            "subnet_id": "subnet-05210f01088b5f214"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0063d20c292cd0066",
            "route_table_id": "rtb-073c38cb37174d870",
            "subnet_id": "subnet-080c03d65c2a23faf"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cfa0c0cc635de339",
            "route_table_id": "rtb-073c38cb37174d870",
            "subnet_id": "subnet-0280aa8511cba791a"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "admin",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:769113276459:subnet/subnet-08f1b34f5af50f3b3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.20.0.0/21",
            "id": "subnet-08f1b34f5af50f3b3",
            "map_public_ip_on_launch": false,
            "owner_id": "769113276459",
            "tags": {
              "Name": "admin_az1",
              "kubernetes.io/cluster/test-mbazych": "shared"
            },
            "vpc_id": "vpc-0c7db017a94322e07"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:769113276459:subnet/subnet-0e53ec78d82c7e23d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.20.8.0/21",
            "id": "subnet-0e53ec78d82c7e23d",
            "map_public_ip_on_launch": false,
            "owner_id": "769113276459",
            "tags": {
              "Name": "admin_az2",
              "kubernetes.io/cluster/test-mbazych": "shared"
            },
            "vpc_id": "vpc-0c7db017a94322e07"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:769113276459:subnet/subnet-0ad9dc0a98a120e99",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.20.16.0/21",
            "id": "subnet-0ad9dc0a98a120e99",
            "map_public_ip_on_launch": false,
            "owner_id": "769113276459",
            "tags": {
              "Name": "admin_az3",
              "kubernetes.io/cluster/test-mbazych": "shared"
            },
            "vpc_id": "vpc-0c7db017a94322e07"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_prod",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:769113276459:subnet/subnet-005cb6f998576ce89",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.20.64.0/21",
            "id": "subnet-005cb6f998576ce89",
            "map_public_ip_on_launch": false,
            "owner_id": "769113276459",
            "tags": {
              "Name": "private_prod_az1",
              "kubernetes.io/cluster/test-mbazych": "shared"
            },
            "vpc_id": "vpc-0c7db017a94322e07"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:769113276459:subnet/subnet-0f7970d87c5717ca1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.20.72.0/21",
            "id": "subnet-0f7970d87c5717ca1",
            "map_public_ip_on_launch": false,
            "owner_id": "769113276459",
            "tags": {
              "Name": "private_prod_az2",
              "kubernetes.io/cluster/test-mbazych": "shared"
            },
            "vpc_id": "vpc-0c7db017a94322e07"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:769113276459:subnet/subnet-0df7fcfe5610e9db9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.20.80.0/21",
            "id": "subnet-0df7fcfe5610e9db9",
            "map_public_ip_on_launch": false,
            "owner_id": "769113276459",
            "tags": {
              "Name": "private_prod_az3",
              "kubernetes.io/cluster/test-mbazych": "shared"
            },
            "vpc_id": "vpc-0c7db017a94322e07"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_working",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:769113276459:subnet/subnet-0a94670b3e446cef0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.20.96.0/21",
            "id": "subnet-0a94670b3e446cef0",
            "map_public_ip_on_launch": false,
            "owner_id": "769113276459",
            "tags": {
              "Name": "private_working_az1",
              "kubernetes.io/cluster/test-mbazych": "shared"
            },
            "vpc_id": "vpc-0c7db017a94322e07"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:769113276459:subnet/subnet-002ae6bcece46d1ae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.20.104.0/21",
            "id": "subnet-002ae6bcece46d1ae",
            "map_public_ip_on_launch": false,
            "owner_id": "769113276459",
            "tags": {
              "Name": "private_working_az2",
              "kubernetes.io/cluster/test-mbazych": "shared"
            },
            "vpc_id": "vpc-0c7db017a94322e07"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:769113276459:subnet/subnet-0211b92a5c7ce1c93",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.20.112.0/21",
            "id": "subnet-0211b92a5c7ce1c93",
            "map_public_ip_on_launch": false,
            "owner_id": "769113276459",
            "tags": {
              "Name": "private_working_az3",
              "kubernetes.io/cluster/test-mbazych": "shared"
            },
            "vpc_id": "vpc-0c7db017a94322e07"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:769113276459:subnet/subnet-05210f01088b5f214",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.20.32.0/21",
            "id": "subnet-05210f01088b5f214",
            "map_public_ip_on_launch": false,
            "owner_id": "769113276459",
            "tags": {
              "Name": "public_az1",
              "kubernetes.io/cluster/test-mbazych": "shared"
            },
            "vpc_id": "vpc-0c7db017a94322e07"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:769113276459:subnet/subnet-080c03d65c2a23faf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.20.40.0/21",
            "id": "subnet-080c03d65c2a23faf",
            "map_public_ip_on_launch": false,
            "owner_id": "769113276459",
            "tags": {
              "Name": "public_az2",
              "kubernetes.io/cluster/test-mbazych": "shared"
            },
            "vpc_id": "vpc-0c7db017a94322e07"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:769113276459:subnet/subnet-0280aa8511cba791a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.20.48.0/21",
            "id": "subnet-0280aa8511cba791a",
            "map_public_ip_on_launch": false,
            "owner_id": "769113276459",
            "tags": {
              "Name": "public_az3",
              "kubernetes.io/cluster/test-mbazych": "shared"
            },
            "vpc_id": "vpc-0c7db017a94322e07"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:769113276459:vpc/vpc-0c7db017a94322e07",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-094e2ee9621bb7c57",
            "default_route_table_id": "rtb-08541a9b304154ff0",
            "default_security_group_id": "sg-0866e8cefac0f49fb",
            "dhcp_options_id": "dopt-bd30b4d7",
            "enable_classiclink": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0c7db017a94322e07",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-08541a9b304154ff0",
            "owner_id": "769113276459",
            "tags": {
              "Name": "vpc",
              "kubernetes.io/cluster/test-mbazych": "shared"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}